--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
             // Resto do código existente...
             jogoIniciado = false; // Desativa a movimentação
-            document.getElementById("mensagem").innerText = "Não foi desta vez! \n Tente novamente clicando em reiniciar.";
+            document.getElementById("mensagem").innerText = "Não foi desta vez! \n Tente novamente clicando em iniciar(▶).";
             document.querySelector("#iniciar").style.visibility = "visible";
             document.getElementById("vamoslah").style.visibility = "hidden";
 
